feat: manipulando horários de aulas
