# src/intefaces/entities/Discipline.ts
@@ -1,18 +1,18 @@
 import { IUser } from "./User";
 
+export interface Schedule {
+    day_of_week: Number; // 0 = Domingo, 1 = Segunda, ... 6 = Sábado
+    start_time: String; // formato 'HH:mm'
+    end_time: String;    // formato 'HH:mm'
+};
+
 export interface IDiscipline {
     id: string;
     name: string;
     description: string;
     teacher_id: string;
     students: string[];
-    schedule: [
-        {
-            day_of_week: Number; // 0 = Domingo, 1 = Segunda, ... 6 = Sábado
-            start_time: String; // formato 'HH:mm'
-            end_time: String;    // formato 'HH:mm'
-        }
-    ];
+    schedule: Schedule | null;
     created_at: Date;
     updated_at: Date;
 }
@@ -22,13 +22,7 @@ export interface IDisciplineCreate {
     description: string;
     teacher_id: string;
     students: string[];
-    schedule: [
-        {
-            day_of_week: Number; // 0 = Domingo, 1 = Segunda, ... 6 = Sábado
-            start_time: String; // formato 'HH:mm'
-            end_time: String;    // formato 'HH:mm'
-        }
-    ];
+    schedule: Schedule | null;
 }
 
 export interface IDisciplineReport {
@@ -37,13 +31,7 @@ export interface IDisciplineReport {
     description: string;
     teacher: IUser | null;
     students: IUser[];
-    schedule: [
-        {
-            day_of_week: Number; // 0 = Domingo, 1 = Segunda, ... 6 = Sábado
-            start_time: String; // formato 'HH:mm'
-            end_time: String;    // formato 'HH:mm'
-        }
-    ];
+    schedule: Schedule | null;
     created_at: Date;
     updated_at: Date;
 }
